yml/destinationrule.yml
  apiVersion: networking.istio.io/v1beta1
  kind: DestinationRule
  metadata:
    creationTimestamp: "2022-10-11T12:26:42Z"
    generation: 1
    name: finrpt-comnclnt-svc-destinationrule
    namespace: santander-glm-dev
    resourceVersion: "773142714"
    uid: f015d41f-1036-4579-b401-8f063ebfffe5
  spec:
    host: finrpt-comnclnt-svc.santander-glm-dev.svc.cluster.local
    trafficPolicy:
      loadBalancer:
        consistentHash:
          useSourceIp: true
      tls:
        mode: DISABLE
