yml/Nexus.yml
apiVersion: image.openshift.io/v1
kind: ImageStream
metadata:
  name: nexus
---

kind: "DeploymentConfig"
apiVersion: "apps.openshift.io/v1"
metadata:
  name: "nexus"
spec:
  template: 
    metadata:
      labels:
        name: "nexus"
    spec:
      containers:
        - name: "nexus"
          image: "registry.connect.redhat.com/sonatype/nexus-repository-manager:3.43.0-ubi-1"
          ports:
            - containerPort: 8081
              protocol: "TCP"
      imagePullSecrets:
      - name: 7691997-praveen-pull-secret
  replicas: 1
  triggers:
    - type: "ConfigChange" 
    - type: "ImageChange" 
      imageChangeParams:
        automatic: true
        containerNames:
          - "nexus"
        from:
          kind: "ImageStreamTag"
          name: "nexus:latest"
  strategy: 
    type: "Rolling"
  paused: false 
  revisionHistoryLimit: 2 
  minReadySeconds: 0 

---
apiVersion: v1
kind: Service
metadata:
  name: nexus
spec:
  selector:
    name: "nexus"
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nexus
spec:
  path: /
  to:
    kind: Service
    name: nexus
  port:
    targetPort: 8081
